# svql

./: .bazelignore  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  Cargo.toml  MODULE.bazel  QWEN.md  QueryConstructionGuide.md  README.md  Results.md  TODO.md  clippy.toml  config.toml  flake.nix  fusesoc.conf  out.il  out.md  rustfmt.toml  temp.txt
scripts/: BUILD.bazel  QWEN.md  asan_test.sh  build.sh  collect_data.bash  collect_data.json  collect_data.sh  collect_data_cv32e.json  collect_data_e203.json  collect_data_soc_intercon.json  collect_data_soc_periph.json  collect_data_tile.json  collect_data_udma.json  demo.sh  diagram.sh  flatten_json.sh  format_data.bash  md_tree.py  openpiton_full.sh  out.sh  rel_build.sh  results.txt  rtlil_to_verilog.sh  setup.sh  svql_driver.ys  test.sh  test_net_driver.sh  test_net_driver.ys  test_svql_driver.sh  verific_to_json.sh  verific_to_json_no_flatten.sh  verilog_to_json.sh  yosys_BUILD_bazel  yosys_abc_CMakeLists  yosys_libs_cxxopts_BUILD  yosys_libs_cxxopts_MODULE
scripts/cores_download/hack@dac21/: _chipset.core_  _exu_bw_r_irf_common.core_  _manycore.core_  ariane_setup.bash  download.bash  download.sh  preproc.py
scripts/cores_download/hackatdac21/: download.bash  download.sh  exu_bw_r_irf_common._core  openpiton_full.sh  openpiton_tile.sh  openpiton_tile_flatten.sh  preprocessor.core  verilog_to_json.sh
svql_cli/: Cargo.toml  README.md
svql_cli/src/: args.rs  main.rs  query_registry.rs
svql_cli/src/step1/: README.md  adc_test.v  mod.rs  primitive_ha_test.v  synth.sh
svql_cli/src/step2/: README.md  full_adder_from_half_adders.il  full_adder_from_half_adders.v  mod.rs  synth.sh
svql_cli/src/step3/: README.md  full_adder_flat.v  mixed_fa_test.il  mixed_fa_test.v  mixed_ha_test.il  mixed_ha_test.v  mod.rs  synth.sh
svql_cli/src/step4/: README.md  both_fa.v  cdc_test.v  mod.rs
svql_cli/src/step5/: README.md
svql_common/: BUILD.bazel  CMakeLists.txt  Cargo.toml  QWEN.md  README.md  build.rs  cbindgen.toml  test_header.h
svql_common/src/: build_support.rs  config.rs  id_string.rs  lib.rs  mat.rs  matches.rs  pat.rs  pattern.rs  prelude.rs  source.rs  test_cases.rs  test_cases.rs.bak  util.rs  wire.rs  yosys.rs
svql_common/src/bridge/: mod.rs
svql_common/src/config/: args_parse.rs  mod.rs
svql_common/src/core/: list.rs  mod.rs  string.rs
svql_common/src/design/: cell.rs  mod.rs  selector.rs  source.rs  wire.rs
svql_common/src/index/: mod.rs
svql_common/src/yosys/: config.rs  design_path.rs  design_set.rs  mod.rs  module.rs
svql_common/tests/: cell_types_tests.rs  design_path_tests.rs  graph_index_tests.rs  module_config_tests.rs  wire_types_tests.rs
svql_common/tests/common/: mod.rs
svql_design_set/: Cargo.toml
svql_design_set/src/: cell.rs  design_container.rs  design_set.rs  lib.rs
svql_design_set/src/cell/: cell_index.rs  cell_kind.rs  cell_wrapper.rs  global_cell_index.rs  mod.rs
svql_design_set/src/graph_index/: cell_registry.rs  connectivity_graph.rs  mod.rs  submodule.rs
svql_driver/: BUILD.bazel  CMakeLists.txt  Cargo.toml  QWEN.md  README.md  build.rs
svql_driver/include/: GraphConversion.hpp  RegexMap.hpp  SubCircuitReSolver.hpp  SubCircuitSolver.hpp  SvqlConfig.hpp  SvqlPass.hpp  detail.hpp  svql_common.h
svql_driver/src/: GraphConversion.cpp  RegexMap.cpp  SubCircuitReSolver.cpp  SubCircuitSolver.cpp  SvqlPass.cpp  api.rs  cache.rs  config.rs  connectivity.rs  context.rs  design_container.rs  driver.rs  importer.rs  key.rs  lib.rs  manager.rs  query_ctx.rs  subgraph.rs  util.rs
svql_driver/src/subgraph/: anchor.rs  cell_kind.rs  compat.rs  index.rs  mod.rs  ports.rs  search.rs  state.rs  strategy.rs
svql_driver/tests/: and_tests.rs  dff_tests.rs  driver_tests.rs  integration_tests.rs
svql_macros/: Cargo.toml  README.md
svql_macros/src/: common.rs  composite.rs  lib.rs  netlist.rs  parsing.rs  variant.rs
svql_macros/src/composite/: analyze.rs  codegen.rs  lower.rs  mod.rs  parse.rs
svql_macros/src/enum_composite/: analyze.rs  codegen.rs  lower.rs  mod.rs  parse.rs
svql_macros/src/netlist/: analyze.rs  codegen.rs  lower.rs  mod.rs  parse.rs
svql_macros/src/variant/: analyze.rs  codegen.rs  mod.rs
svql_pat/svql_pat_lib/: CMakeLists.txt
svql_pat/svql_pat_lib/include/: SvqlPatPass.hpp
svql_pat/svql_pat_lib/src/: SvqlPatPass.cpp
svql_query/: Cargo.toml  QWEN.md  README.md  build.rs
svql_query/src/: and.rs  binding.rs  cell_id.rs  composite.rs  connect.rs  connection.rs  file_info.rs  full_path.rs  graph.rs  haystack.rs  instance.rs  ir.rs  lib.rs  main.rs  module.rs  module_raw.rs  net.rs  netlist.rs  port_spec.rs  ports.rs  prelude.rs  query.rs  report.rs  selector.rs  test_harness.rs  wire.rs
svql_query/src/composite/: composite.rs  composite_macro.rs  enum_composite.rs  mod.rs
svql_query/src/composites/: dff_then_and.rs  fsm_core.rs  mod.rs  rec_and.rs  rec_or.rs
svql_query/src/driver/: mock.rs  mod.rs  net.rs
svql_query/src/dsl/: mod.rs  selector.rs
svql_query/src/enum_composites/: and_any.rs  combinational.rs  dff_any.rs  logic_tree.rs  mod.rs
svql_query/src/examples/: and.rs  double_and.rs  mod.rs  triple_and.rs
svql_query/src/executor/: naive.rs
svql_query/src/ir/: mod.rs  (+1 more)
svql_query/tests/: and_tests.rs  cwe1234_tests.rs  integration_tests.rs  mod.rs  primitive_scans.rs  test_harness.rs
svql_query/verilog/: and.v  many_ands.v
svql_query_proc_macro/: Cargo.toml
svql_query_proc_macro/src/: lib.rs
svql_subgraph/: Cargo.toml  README.md  build.rs
svql_subgraph/src/: anchor.rs  assignment.rs  candidates.rs  cell.rs  cell_kind.rs  cell_mapping.rs  compat.rs  config.rs  connectivity.rs  constraints.rs  dedupe.rs  design_container.rs  design_index.rs  embedding.rs  finder.rs  graph_index.rs  index.rs  isomorphism.rs  lib.rs  mapping.rs  match_.rs  matcher.rs  node.rs  ports.rs  profiling.rs  progress.rs  search.rs  simple.rs  state.rs  strategy.rs  test_harness.rs  tests.rs  util.rs  utils.rs  view.rs
svql_subgraph/tests/: integration_tests.rs  locked_reg.rs  mod.rs  shared_harness.rs  test_harness.rs  usage_yosys.rs
(+520 files in other folders)
