##############################################################################
# MODULE.bazel – Bzlmod configuration
##############################################################################
module(
    name = "svql",
    version = "0.1.0",
)

##############################################################################
# External rule sets – tell Bazel where to get them
##############################################################################
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "rules_rust", version = "0.62.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

##############################################################################
# rules_rust – register a toolchain
##############################################################################
rust_ext = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust_toolchain",
)
rust_ext.toolchain(
    version = "1.78.0",          # any recent stable works
    targets = ["@platforms//:all"],
)
use_repo(rust_ext, "rust")

##############################################################################
# crates from Cargo.toml -> Bazel repos
##############################################################################
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml", "//:svql_common/Cargo.toml"],
)
use_repo(crate, "crates")
