##############################################################################
# MODULE.bazel – Bzlmod configuration
##############################################################################
module(
    name = "svql",
    version = "0.1.0",
)

##############################################################################
# External rule sets – tell Bazel where to get them
##############################################################################
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "rules_rust", version = "0.62.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Add a dependency on the cxxopts module
bazel_dep(name = "cxxopts")

# Tell Bazel to find the cxxopts module at a local path
local_path_override(
    module_name = "cxxopts",
    path = "yosys/libs/cxxopts",
)

##############################################################################
# rules_rust – register a toolchain
##############################################################################
rust_ext = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust_toolchain",
)
rust_ext.toolchain(
    version = "1.78.0",          # any recent stable works
    targets = ["@platforms//:all"],
)
use_repo(rust_ext, "rust")

##############################################################################
# crates from Cargo.toml -> Bazel repos
##############################################################################
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml", "//:svql_common/Cargo.toml"],
)
use_repo(crate, "crates")

###############################################################################
# C A R G O   B I N D E P S
###############################################################################

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    version = "nightly",
)
use_repo(
    rust_host_tools,
    "rust_host_tools_nightly",
)

# https://bazelbuild.github.io/rules_rust/crate_universe_bzlmod.html
crate_index_cargo_bindeps = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate_index_cargo_bindeps.from_cargo(
    name = "crate_index_cargo_bindeps",
    cargo_lockfile = "//:Cargo.lock",
    generate_binaries = True,
    host_tools = "@rust_host_tools_nightly",
    manifests = ["//:Cargo.toml", "//svql_common:Cargo.toml"],
)
use_repo(
    crate_index_cargo_bindeps,
    "crate_index_cargo_bindeps",
)
