
      
# scripts/BUILD.bazel
package(default_visibility = ["//visibility:public"])

sh_test(
    name = "test_svql_driver",
    srcs = ["test_svql_driver.sh"],
    data = [
        "//svql_driver:svql",
        "//svql_driver:examples/cwe1234/variant1.v",
        "//svql_driver:examples/cwe1234/locked_register_pat.v",
        "//yosys:yosys",  # Corrected dependency
    ],
)

    