[package]
name = "svql_cli"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
tikv-jemallocator.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
sysinfo.workspace = true 
csv.workspace = true

svql_common.workspace = true
svql_driver.workspace = true
svql_query.workspace = true
svql_query_lib.workspace = true
svql_subgraph.workspace = true
shell-words.workspace = true

prjunnamed-netlist.workspace = true

[lints]
workspace = true
