[package]
name = "svql_common"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
prjunnamed-netlist.workspace = true

lazy_static.workspace = true

[dev-dependencies]
rstest.workspace = true