[package]
name = "svql_common"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
lazy_static.workspace = true
tempfile.workspace = true
log.workspace = true
which.workspace = true
contracts.workspace = true

prjunnamed-netlist.workspace = true
prjunnamed-yosys_json.workspace = true

[dev-dependencies]
rstest.workspace = true
