[package]
name = "svql_common"
authors.workspace = true
edition.workspace = true
# license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
###############
# PRJUNNAMED
###############
prjunnamed-netlist.workspace = true
prjunnamed-yosys_json.workspace = true

###############
# OTHER LIBRARIES
###############
argparse = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[[bin]]
name = "to_rtlil"
path = "src/bin/to_rtlil.rs"