[package]
name = "svql_design_set"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
###############
# SVQL
###############
# svql_common.workspace = true

###############
# PRJUNNAMED
###############
prjunnamed-netlist.workspace = true

###############
# OTHER LIBRARIES
###############
ouroboros.workspace = true