# svql_driver/BUILD.bazel
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_cmake_sources",
    srcs = glob(
        ["**/*"],
        exclude = ["BUILD.bazel"],
    ),
)

cmake(
    name = "svql",
    lib_source = ":all_cmake_sources",
    # We no longer depend on the yosys_build rule for CcInfo,
    # as our new genrule doesn't provide it.
    deps = [
        "//svql_common:svql_common",
    ],
    # We depend on the yosys_build rule itself to make sure it runs,
    # and the BUILD file to get the source root.
    data = [
        "//svql_common:header",
        "//yosys:yosys_make",
        "//yosys:BUILD.bazel",
    ],
    cache_entries = {
        "SVQL_COMMON_LIB": "$(location //svql_common:svql_common)",
        "SVQL_COMMON_INCLUDE": "$(location //svql_common:header)/..",
        "YOSYS_BIN": "$(locations //yosys:yosys_make)[1]",
        "YOSYS_CONFIG": "$(locations //yosys:yosys_make)[2]",
        "YOSYS_SOURCE_ROOT": "$(location //yosys:BUILD.bazel)/..",
    },
    out_shared_libs = ["svql.so"],
)

alias(
    name = "test_example",
    actual = "//scripts:test_svql_driver",
)