# svql_driver/BUILD.bazel
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(
        ["**/*"],
        exclude = ["BUILD.bazel"],
    ) + glob(
        [".git/**"],
    )
)

cmake(
    name = "svql",
    lib_source = ":srcs",
    # Depend on the main 'yosys_build' rule, not a specific output file.
    # rules_foreign_cc will automatically consume its CcInfo provider.
    deps = [
        "//svql_common:ffi",
        "//yosys:yosys",
    ],
    out_shared_libs = ["svql.so"],
    local = True,
)

alias(
    name = "test_example",
    actual = "//scripts:test_svql_driver",
)